yte2e/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yte2e-backend-depl
  name: yte2e-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yte2e-backend-depl
  template:
    metadata:
      labels:
        app: yte2e-backend-depl
    spec:
      nodeName: kube4
      imagePullSecrets:
        - name: scw-regcred
      containers:
        - image: rg.fr-par.scw.cloud/namespace-yte2e/ydubber-backend:latest
          name: yte2e-downloader
          command: ["sh", "-c", "npm run start:downloader"]
        - image: rg.fr-par.scw.cloud/namespace-yte2e/ydubber-backend:latest
          name: yte2e-generator
          command: ["sh", "-c", "npm run start:generator"]
        - image: rg.fr-par.scw.cloud/namespace-yte2e/ydubber-backend:latest
          name: yte2e-backend
          command: ["sh", "-c", "npm run start:backend"]
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: yte2e-backend-svc
spec:
  type: ClusterIP
  selector:
    app: yte2e-backend-depl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-yte2e-depl
  name: mongo-yte2e-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-yte2e-depl
  template:
    metadata:
      labels:
        app: mongo-yte2e-depl
    spec:
      containers:
        - image: mongo
          name: mongo-yte2e
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db

      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: ydubber-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  type: ClusterIP
  selector:
    app: mongo-yte2e-depl
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
